--- a/Login-y-registro/assets/HTML/Ayuda-info.html
+++ b/Login-y-registro/assets/HTML/Ayuda-info.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ayuda e Info</title>
+    <title>Maracaibo phone</title>
     <link rel="stylesheet" href="../css/normalize.css">
   <!--   <link rel="shortcut icon" href="../img/cart.jpeg" type="image/x-icon"> -->
     <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/nav-footer.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&display=swap" rel="stylesheet"> 
 </head>
 
@@ -51,7 +51,7 @@
             <div class="contenedor-sobre-nosotros">
                 <img src="../img/accesorios y telefono este si.jpg" alt="" class="imagen-about-us">
                 <div class="contenido-textos">
-                    <h3><span>1</span>Los Mejores Productos</h3>
+                    <h3><span> 1 </span>Los Mejores Productos</h3>
                     <p>Le vendemos los mejores productos telefonicos que existen en el mercado tanto como los dispositivos Android y Apple
                     como tambien el dispositivo Motorola!
                     </p>
@@ -68,19 +68,19 @@
                 <h2 class="titulo">Nuestros servicios</h2>
                 <div class="servicio-cont">
                     <div class="servicio-ind">
-                        <img src="../img/Reparando-iPhone.jpg" alt="">
+                        <img class="Reparar" src="../img/Reparando-iPhone.jpg" alt="Reparando-iPhone">
                         <h3>Mantenimiento del dispositivo</h3>
-                        <p>En caso de que el dispostivo venga defectuoso nosotros tenemos la capacidad de repararlo o incluso cambiarselo.</p>
+                        <p>En el caso de que el dispostivo venga defectuoso nosotros tenemos la capacidad de repararlo o incluso cambiarselo.</p>
                     </div>
                     <div class="servicio-ind">
-                        <img src="../img/liberar-telefono-celular.jpg" alt="">
+                        <img class="Liberar" src="../img/liberar-telefono-celular.jpg" alt="liberar-telefono-celular">
                         <h3>Se liberan dispositivos</h3>
-                        <p>En tal caso de que su dispositivo haya sido comprado en el extranjero  nosotros le podemos ayudar a liberarlo.</p>
+                        <p>En el caso de que su dispositivo haya sido comprado en el extranjero  nosotros le podemos ayudar a liberarlo.</p>
                     </div>
                     <div class="servicio-ind">
-                        <img src="" alt="">
-                        <h3></h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, qui?</p>
+                        <img class="Venta" src="../img/Venta.png" alt="Venta">
+                        <h3>Asesoramiento de dispositivos móviles</h3>
+                        <p>Esté servicio esta dedicado a las personas que desconocen de la tecnología y necesitan que lo asesoren para elegir el dispositivo móvil que se adacte a sus necesidades ya que no necesariamente la mejor opción es el teléfono mas costoso</p>
                     </div>
                 </div>
             </div>
@@ -90,18 +90,18 @@
         <div class="contenedor-footer">
             <div class="content-foo">
                 <h4>Telefonos</h4>
-                <p>8296312</p>
+                <p>04146680987</p>
             </div>
             <div class="content-foo">
                 <h4>Email</h4>
-                <p>8296312</p>
+                <p>antonymanuelbenitez@gmail.com</p>
             </div>
             <div class="content-foo">
                 <h4>Location</h4>
                 <p>Maracaibo</p>
             </div>
         </div>
-        <h2 class="titulo-final">&copy; Venta de telefonos@2022</h2>
+        <h2 class="titulo-final">&copy; Maracaibo Phone@2022</h2>
     </footer>
 </body>
 
