--- a/Login-y-registro/assets/HTML/Login.html
+++ b/Login-y-registro/assets/HTML/Login.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login y Register</title>
+    <title>Maracaibo phone</title>
     <link rel="stylesheet" href="../css/normalize.css">    
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/Login.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
 
@@ -95,6 +96,7 @@
             </div>
 
         </main>
+
 
         <script src="../js/script.js"></script>
 </body>
